# obs-freeze-filter

./: CMakeLists.txt  README.md  buildspec.json  freeze-filter.c  freeze-filter.h  freeze-filter.rc  installer.iss.in
.github/workflows/: build.yml
CI/macos/: freeze-filter.pkgproj
data/effects/: freeze_part.effect
data/locale/: en-US.ini  zh-CN.ini
